[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/Sprites/wizard.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Areas/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/Audio.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.06568
height = 0.901407

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.24149
height = 5.76318

[sub_resource type="Animation" id=3]
resource_name = "Attack"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 3, 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 2
collision_mask = 2147483649
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.05726, 1.05726 )
texture = ExtResource( 1 )
vframes = 5
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -2.05778, 5.53459 )
scale = Vector2( 0.561516, 0.561516 )
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="." groups=[
"player",
]]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -2.04969, 2.25991 )
shape = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
scale = Vector2( 0.63622, 0.63622 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
position = Vector2( -3.27158, 5.73866 )

[node name="TurnAxis" type="Position2D" parent="."]

[node name="BulletPoint" type="Position2D" parent="TurnAxis"]
scale = Vector2( 8.66216, 8.66216 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Walk = SubResource( 5 )

[node name="Audio" parent="." instance=ExtResource( 5 )]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
